fixed alignment issue with overlay elements

--- a/style.css
+++ b/style.css
@@ -7,25 +7,37 @@ body {
 	background-size: 100%;
 }
 .boombox {
-	background-image: url("boom_box.jpg");
+	/*background-image: url("boom_box.jpg");
 	width: 100%;
 	height: 100vh;
     background-repeat: no-repeat;
     background-position: center;
-    overflow: none;
+    position: fixed;
+    overflow: none;*/
 }
+
+#backgd {
+	position: absolute;
+	z-index: -99999;
+}
+
+.image_container{
+	width: 78.5%;
+	margin:auto;
+}
+
 .title {
 	width:50%;
 	margin: auto;
-	margin-bottom: 15px;
+	/*margin-bottom: 3%;*/
 }
 .title h1 {
 	text-align: center;
-	margin:0;
+	margin: 0;
 }
 .upload {
-	width: 47%;
-	height: 24px;
+	width: 570px;
+	height: 22px;
 	margin:auto;
 }
 .upload input, button{
